updates to styles and new addition to content.

--- a/business.html
+++ b/business.html
@@ -40,8 +40,16 @@
 		</ul>
 	</div>
 	<div class="container">
+		<div id="glasgow">
+			<img src="images/glasgow.jpg" alt="Business Center in Glasgow, Scotland" />
+			<p class="reftext">Business Center in Glasgow, Scotland</p>
+		</div>
 		<div>
 			<h2>Corporate Culture</h2>
+			<p><strong>Cultural Grammar</strong> is extremely important, especially when visiting a different culture from your own.
+				This, of course, is abiding by an understood set of rules that have become an integral part of
+				a given culture.  When visiting another culture as part of a business endeavor , you always want to 
+				present your best self.  Here are a few things to consider when traveling to Scotland for business.
 		</div>
 		
 		<div>
@@ -50,7 +58,7 @@
 				true professional, you always want to impress your counterpart.
 				Knowing the general expectations for your professional attire
 				is extremely important.  Follow the guidelines below to stay sharp.</p>
-			<ul>
+			<ul class="bulletPoints">
 				<li>Men - The business attire in Scotland is very similar to the United States.  Depending on the type of company, men may be seen wearing suits or dress shirts and slacks.  Tie is optional.</li>
 				<li>Women – Women also wear dress pants and a blouse or a sweater.  The season determines certain attire.  Wearing a skirt or a dress is acceptable, as long as it is not too short.</li>
 			</ul>
@@ -61,7 +69,7 @@
 			<p>In the world of business, negotiations are made daily.  You have to
 				put yourself in the best position to win.  You can't win, respectfully, 
 				if you do not know the rules of the game.  Here are some things to consider.</p>
-			<ul>
+			<ul class="bulletPoints">
 				<li>Most decisions made are made from the top of the chain and work their way down.</li>
 				<li>Confrontation is avoided at all costs and most Scots, when closing a sale, pursue a softer selling technique.</li>
 				<li>Negotiating of price in markets or shops is very rare in Scotland.</li>
@@ -74,7 +82,7 @@
 				prepared, especially when in the company of business partners and
 				clients
 			</p>
-			<ul>
+			<ul class="bulletPoints">
 				<li>Except for when eating burgers or hotdogs, one should never eat with their hands.  From pizza to chicken, forks and knives are always used. </li>
 				<li>Always hold your fork in your weak hand and your knife in your strong hand.   It is improper to switch your fork to your strong hand.</li>
 				<li>Always carry a handkerchief for sneezing, burping, or wiping nose.</li>
