--- a/general.html
+++ b/general.html
@@ -42,7 +42,9 @@
 			<h2>Social Behaviors</h2>
 			<p>	Every Culture has a diverse group of individuals.  Through the 
 				many different individuals, however, there are many similar actions
-				and cultural norms.  Below are cultural norms that you will notice
+				and cultural norms.  After examining the social behaviors of the Scots,
+				you may be inclined to think there is <strong>Universalism</strong> in the way we 
+				conduct ourselves. Below are cultural norms that you will consistently find
 				as you travel through Scotland.
 			</p>
 		</div>
@@ -53,7 +55,7 @@
 		<hr/>
 		<div>
 			<h3>Communication Style</h3>
-			<ul>
+			<ul class="bulletPoints">
 				<li>The people of Scotland are very polite.  Politeness is highly valued in Scotland.  You can expect a “please”, thank you”, and a “sorry”, if need-be, while in Scotland.</li>
 				<li>Scots are not very direct, especially in moments where most might have a complaint.  Most Scottish people would “brush” their shoulders off, and move on.</li>
 				<li>Scots are very spirited and enthusiastic when talking.  The tone of voice and facial expressions are an important part of Scottish communication.</li>
@@ -62,7 +64,7 @@
 		<hr/>
 		<div>
 			<h3>Personal Space</h3>
-			<ul>
+			<ul class="bulletPoints">
 				<li>The people of Scotland generally prefer 2 – 3 feet between them while speaking.</li>
 				<li>Touching another individual is kept to a minimum unless you know them very well.</li>
 			</ul>
@@ -80,7 +82,7 @@
 		<hr/>
 		<div>
 			<h3>Gestures</h3>
-			<ul>
+			<ul class="bulletPoints">
 				<li>In Scotland, giving the “peace sign” is seen as an obscenity.</li>
 				<li>In America, we generally walk on the right and pass on the left.  This is inverted in Scotland.  People walk on the left and pass on the right.</li>
 			</ul>
