--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		</div>
 	<div class="container">
 		<img id="scotland" src="images/scotland.gif" alt="scotland"/>
-		<table>
-			<th id="tableHeader">General Information</th>
+		<table id="generalInfo">
+			<!-- <th id="tableHeader">General Information</th> -->
 			<tr>
 				<td class="trow1">Motto</td>
 				<td class="trow2">"In My Defens God Me Defend"</td>
